# axum

./: .ls-lint.yaml  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: code-quality.yaml  test.yaml
crate/: Cargo.toml  README.md
crate/src/: lib.rs
crate/src/extract/: connect_info.rs  form.rs  matched_path.rs  path.rs
crate/src/extract/extra/: scheme.rs
crate/src/layers/: request_body_limit.rs
crate/src/response/: mod.rs
crate/src/response/json/: mod.rs
package/: CHANGELOG.md  Cargo.toml  README.md
package/src/: lib.rs
package/src/extract/: connect_info.rs  form.rs  json.rs  matched_path.rs  nested_path.rs  path.rs  query.rs
package/src/extract/extra/: host.rs  scheme.rs  typed_header.rs
package/src/extract/multipart/: typed.rs
package/src/layers/: request_body_limit.rs  request_time_limit.rs
package/src/response/: mod.rs
package/src/response/json/: create.rs  error.rs  failure.rs  main.rs  mod.rs  response.rs  success.rs
package/src/response/json/create/: failure.rs  mod.rs  success.rs
package/src/response/json/functions/: create.rs  failure.rs  mod.rs  success.rs
test/: Cargo.toml
test/src/router/: matched_path.rs  mod.rs  nested_path.rs  query.rs  scheme.rs
test/src/router/json/: mod.rs  optional.rs
test/src/router/typed_header/: mod.rs  optional.rs
test/src/tests/: form.rs  nested_path.rs  query.rs  request_body_limit.rs  request_time_limit.rs
test/src/tests/typed_header/: mod.rs
tests/: Cargo.toml
tests/src/router/: connect_info.rs  form.rs  host.rs  mod.rs  path.rs  request_body_limit.rs  request_time_limit.rs
tests/src/router/multipart/: file.rs  mod.rs
tests/src/tests/: form.rs  nested_path.rs  path.rs  query.rs  request_body_limit.rs  request_time_limit.rs
tests/src/tests/json/: mod.rs
tests/src/tests/multipart/: mod.rs
tests/src/tests/typed_header/: mod.rs
