[workspace]
resolver = "2"
members = [
    "crate",
    "test",
]

[workspace.dependencies]

# Workspace
jder_axum = { path = "./crate", features = ["all"] }

# Crate
axum = { version = "~0.8.3", default-features = false, features = ["macros"] }
axum-core = { version = "~0.5.2" }
axum-extra = { version = "~0.12.0" }
axum_typed_multipart =  { version = "~0.16.0" }
bytes = { version = "^1.0.0" }
headers = { version = "^0.4.0" }
http = { version = "^1.0.0" }
http-body = { version = "^1.0.0" }
http-body-util = { version = "~0.1.0" }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = { version = "^1.0.0" }
serde_urlencoded = { version = "~0.7.0" }
tokio = { version = "^1.40.0" }
tower-layer = { version = "~0.3.0" }
tower-service = { version = "~0.3.0" }
utoipa = { version = "^5.0.0" }

# Test
axum-test = { version = "^21.0.0" }
