[package]
name = "jder_axum"
version = "0.9.0"
authors = ["Alpheus <contact@alphe.us>"]
edition = "2024"
rust-version = "1.85.0"
description = """
A response builder for axum
"""
readme = "README.md"
homepage = "https://github.com/jderstd/axum"
repository = "https://github.com/jderstd/axum"
license = "MIT"
keywords = [
    "jder",
    "axum",
    "json",
    "response",
    "util",
]
categories = [
    "parser-implementations",
    "web-programming",
]
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
]

[package.metadata.docs.rs]
features = ["all"]

[lib]
name = "jder_axum"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-core = { workspace = true }
axum-extra = { workspace = true, optional = true }
axum_typed_multipart = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
headers = { workspace = true, optional = true }
http = { workspace = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-layer = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[features]
default = [
    "form",
    "json",
    "matched_path",
    "query",
    "tokio",
]
form = [
    "axum/form",
    "dep:serde_urlencoded",
]
json = [
    "axum/json",
    "dep:bytes",
]
matched_path = [
    "axum/matched-path",
]
matched-path = [
    "matched_path",
]
multipart = [
    "axum/multipart",
]
typed_multipart = [
    "multipart",
    "dep:axum_typed_multipart",
]
typed-multipart = [
    "typed_multipart",
]
query = [
    "axum/query",
]
tokio = [
    "axum/tokio",
]
extra = [
    "dep:axum-extra",
]
extra_scheme = [
    "extra",
    "axum-extra/scheme",
]
extra-scheme = [
    "extra_scheme",
]
extra_typed_header = [
    "extra",
    "axum-extra/typed-header",
    "dep:headers",
]
extra-typed-header = [
    "extra_typed_header",
]
request_body_limit = [
    "dep:http-body",
    "dep:http-body-util",
    "dep:tower-layer",
    "dep:tower-service",
]
request-body-limit = [
    "request_body_limit",
]
request_time_limit = [
    "dep:tokio",
    "dep:tower-layer",
    "dep:tower-service",
]
request-time-limit = [
    "request_time_limit",
]
utoipa = [
    "dep:utoipa",
]
all = [
    "form",
    "json",
    "matched_path",
    "multipart",
    "typed_multipart",
    "query",
    "tokio",
    "extra",
    "extra_scheme",
    "extra_typed_header",
    "request_body_limit",
    "request_time_limit",
    "utoipa",
]
